--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
         <div class="container flex">
 
             <!--menu categoria-->
-            <nav class="menu">
+            <nav class="menu flex">
 
-                <a href="#">uomo</a>
-                <a href="#">donna</a>
-                <a href="#">bambini</a>
+                <a href="#">Donna</a>
+                <a href="#">Uomo</a>
+                <a href="#">Bambini</a>
 
             </nav>
 
             <!-- logo -->
-            <div class="logo">
-                
-                <img src="./assets/img/boolean-logo.png" alt="logo">
+            <div class="logo flex">
+
+                <img class="img" src="./assets/img/boolean-logo.png" alt="logo">
 
             </div>
 
