flex grow testing

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container flex">
 
             <!--menu categoria-->
-            <nav class="menu flex">
+            <nav class="menu">
 
                 <a href="#">Donna</a>
                 <a href="#">Uomo</a>
@@ -27,7 +27,7 @@
             </nav>
 
             <!-- logo -->
-            <div class="logo flex">
+            <div class="logo">
 
                 <img class="img" src="./assets/img/boolean-logo.png" alt="logo">
 
