--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boolando</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- FontAwesome 6.2.0 CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 
@@ -46,6 +50,24 @@
 
 
     </header>
+
+
+    <main>
+
+        
+
+        <div class="canvas">
+            <img src="./assets/img/1.webp" alt="">
+
+            <div class="hover-img">
+
+                <img src="./assets/img/1b.webp" aria-hidden="true" alt="">
+
+            </div>
+
+
+
+    </main>
 
     <!-- /fine header -->
 </body>
