--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
             <div class="hover-img">
 
-                <img src="./assets/img/1b.webp" aria-hidden="true" alt="">
+                <img src="./assets/img/1b.webp" alt="">
 
             </div>
 
