add photo 1,2 and 3

--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boolando</title>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <!-- FontAwesome 6.2.0 CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 
@@ -22,7 +18,7 @@
         <div class="container flex">
 
             <!--menu categoria-->
-            <nav class="menu">
+            <nav class="categories">
 
                 <a href="#">Donna</a>
                 <a href="#">Uomo</a>
@@ -54,18 +50,57 @@
 
     <main>
 
-        
+        <div class="gallery flex">
 
-        <div class="canvas">
-            <img src="./assets/img/1.webp" alt="">
+            <!-- blocco1 -->
 
-            <div class="hover-img">
+            <div class="canvas">
 
-                <img src="./assets/img/1b.webp" alt="">
+                <img class="img-canvas" src="./assets/img/1.webp" alt="">
+
+                <div class="hover-img">
+
+                    <img class="img-canvas" src="./assets/img/1b.webp" alt="">
+
+                </div>
 
             </div>
 
+            <!-- /blocco1 -->
 
+            <!-- blocco2 -->
+
+            <div class="canvas">
+
+                <img class="img-canvas" src="./assets/img/2.webp" alt="">
+
+                <div class="hover-img">
+
+                    <img class="img-canvas" src="./assets/img/2b.webp" alt="">
+
+                </div>
+
+            </div>
+
+            <!-- /blocco2 -->
+
+            <!-- blocco3 -->
+
+            <div class="canvas">
+
+                <img class="img-canvas" src="./assets/img/3.webp" alt="">
+
+                <div class="hover-img">
+
+                    <img class="img-canvas" src="./assets/img/3b.webp" alt="">
+
+                </div>
+
+            </div>
+
+            <!-- /blocco3 -->
+
+        </div>
 
     </main>
 
